kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Alertmanager
    gethomepage.dev/pod-selector: app.kubernetes.io/name=alertmanager
    gethomepage.dev/icon: alertmanager.png
spec:
  hostnames:
    - alertmanager.riki.boo
  parentRefs:
    - name: envoy-riki-boo-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Prometheus
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prometheus
    gethomepage.dev/icon: prometheus.png
spec:
  hostnames:
    - prometheus.riki.boo
  parentRefs:
    - name: envoy-riki-boo-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9090
